# stock_news_agent

./: README.md  fetch_news_demo.py  pyproject.toml
data/rag_store/: chroma.sqlite3
mcp_servers/: news_server.py  price_server.py
src/stock_agents/: __init__.py  app.py  config.py  embedding_factory.py  industry.py  llm_factory.py  mcp_client.py  news_graph.py  news_service.py  price_service.py  rag_store.py  ticker.py
src/stock_news_agents.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
